--- a/resources/src/pages/_mixins.pug
+++ b/resources/src/pages/_mixins.pug
@@ -8,12 +8,12 @@ mixin metahead
     meta(name="format-detection" content="telephone=no")
     meta(name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no")
 
-    link(rel='apple-touch-icon' sizes='76x76' href='images/favicon/apple-touch-icon.png')
-    link(rel='icon' type='image/png' sizes='32x32' href='images/favicon/favicon-32x32.png')
-    link(rel='icon' type='image/png' sizes='16x16' href='images/favicon/favicon-16x16.png')
-    link(rel='manifest' href='images/favicon/site.webmanifest')
-    link(rel='mask-icon' href='images/favicon/safari-pinned-tab.svg' color='#5bbad5')
-    meta(name='msapplication-TileColor' content='#2b5797')
+    link(rel='apple-touch-icon' sizes='120x120' href='/apple-touch-icon.png')
+    link(rel='icon' type='image/png' sizes='32x32' href='/favicon-32x32.png')
+    link(rel='icon' type='image/png' sizes='16x16' href='/favicon-16x16.png')
+    link(rel='manifest' href='/site.webmanifest')
+    link(rel='mask-icon' href='/safari-pinned-tab.svg' color='#2f1239')
+    meta(name='msapplication-TileColor' content='#2f1239')
     meta(name='theme-color' content='#ffffff')
 
 
